# LearnVK

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LaunchRenderDoc.cap  README.md  RenderDocSetting.cap  Vulkan学习笔记.md  triangle.rdc
cmake/: compileShaders.cmake
include/: LearnVKApp.h
notes/: Vulkan学习笔记.md
src/: LearnVKApp.cpp
src/shaders/: vertex.vert
